2006-10-26  ARAKI Yasuhiro  <yasu@debian.or.jp>

	** TABLE change. VARCHAR(100) to TEXT.
	* upgrade_1_4.mysql.sql: New file. 
	* donrails/tool/tables-mysql.sql: Apply for this change. (For
	PostgreSQL and Sqlite were not modified. TODO).

	* donrails/app/views/notes/rdf_recent.rxml: Change channel link url from '/archives' to ''.

2006-10-25  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/tool/update-custom.sh: New file. It helps you to maintain  your layout customization. For usage, please read in this file.

2006-10-24  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* Remove auto_link in following files.
	- donrails/app/views/shared/MT/trackback.rhtml
	- donrails/app/views/shared/default/comment-enrollment.rhtml
	- donrails/app/views/shared/default/comment2.rhtml
	- donrails/app/views/shared/comment.rhtml
	- donrails/app/views/shared/timelink.rhtml
	- donrails/app/views/notes/MT/show_enrollment.rhtml
	- donrails/app/views/notes/MT/show_title.rhtml
	- donrails/app/views/notes/MT/noteslist.rhtml
	- donrails/app/views/notes/default/show_enrollment.rhtml
	- donrails/app/views/notes/default/show_title.rhtml
	- donrails/app/views/notes/default/noteslist.rhtml
	- donrails/app/views/notes/pick_comment_a.rhtml
	- donrails/app/views/notes/pick_article_a2.rhtml
	- donrails/app/views/notes/comment_form.rhtml
	- donrails/app/views/notes/pick_enrollment_a.rhtml
	- donrails/app/views/notes/pick_article_a.rhtml

	* donrails/app/controllers/notes_controller.rb (NotesController): Disable cache feature for show_title.

	* donrails/config/routes.rb: remove show_title entry.

2006-10-23  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/controllers/notes_controller.rb (NotesController): Change to modify for caching 'rdf_enrollment'
	* donrails/test/integration/cache_test.rb (CacheTest::test_caching_notes): likewise for 'rdf_enrollment' testing.
	(CacheTest::test_caching_notes): Add test for rdf_{recent,article}
